--- a/Server/package.json
+++ b/Server/package.json
@@ -1,40 +1,14 @@
-const express = require('express');
-const mongoose = require('mongoose');
-const cors = require('cors');
-
-const app = express();
-app.use(cors());
-app.use(express.json());
-
-mongoose.connect('your_mongodb_connection_string', {
-  useNewUrlParser: true,
-  useUnifiedTopology: true,
-});
-
-const storySchema = new mongoose.Schema({
-  title: String,
-  subtitle: String,
-  description: String,
-  location: {
-    lat: Number,
-    lng: Number
+{
+  "name": "vox-antiqua-server",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
   },
-  media: [String]
-});
-
-const Story = mongoose.model('Story', storySchema);
-
-app.post('/stories', async (req, res) => {
-    const story = new Story(req.body);
-    await story.save();
-    res.send(story);
-});
-
-app.get('/stories', async (req, res) => {
-    const stories = await Story.find();
-    res.send(stories);
-});
-
-const port = process.env.PORT || 5000;
-app.listen(port, () => console.log(`Server running on port ${port}`));
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.12.3",
+    "cors": "^2.8.5"
+  }
+}
 
