--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,3 @@
 [build]
-  base = "client"
   publish = "client/build"
-  command = "npm install && npm run build"
+  command = "cd client && npm install && npm run build"
